partial revision of documentation

--- a/AdapterRemoval.1
+++ b/AdapterRemoval.1
@@ -27,7 +27,7 @@ level margin: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .\" new: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .in \\n[rst2man-indent\\n[rst2man-indent-level]]u
 ..
-.TH "ADAPTERREMOVAL" "1" "Aug 02, 2022" "2.3.2" "AdapterRemoval"
+.TH "ADAPTERREMOVAL" "1" "Nov 01, 2022" "3.0.0" "AdapterRemoval"
 .SH NAME
 AdapterRemoval \- Fast short-read adapter trimming and processing
 .SH SYNOPSIS
@@ -35,7 +35,7 @@ AdapterRemoval \- Fast short-read adapter trimming and processing
 \fBadapterremoval3\fP [\fIoptions\fP\&...] \-\-file1 <\fIfilenames\fP> [\-\-file2 <\fIfilenames\fP>]
 .SH DESCRIPTION
 .sp
-\fBAdapterRemoval\fP removes residual adapter sequences from single\-end (SE) or paired\-end (PE) FASTQ reads, optionally trimming Ns and low qualities bases and/or collapsing overlapping paired\-end mates into one read. Low quality reads are filtered based on the resulting length and the number of ambigious nucleotides (\(aqN\(aq) present following trimming. These operations may be combined with simultaneous demultiplexing using 5\(aq barcode sequences. Alternatively, \fBAdapterRemoval\fP may attempt to reconstruct a consensus adapter sequences from paired\-end data, in order to allow the identification of the adapter sequences originally used.
+\fBadapterremoval3\fP removes residual adapter sequences from single\-end (SE) or paired\-end (PE) FASTQ reads, optionally trimming Ns and low qualities bases and/or merging overlapping paired\-end mates into one read. Low quality reads are filtered based on the resulting length and the number of ambiguous nucleotides (\(aqN\(aq) present following trimming. These operations may be combined with simultaneous demultiplexing using 5\(aq barcode sequences. Alternatively, \fBadapterremoval3\fP may attempt to reconstruct a consensus adapter sequences from paired\-end data, in order to allow the identification of the adapter sequences originally used.
 .sp
 If you use this program, please cite the paper:
 .INDENT 0.0
@@ -65,122 +65,113 @@ Print the version string.
 .UNINDENT
 .INDENT 0.0
 .TP
-.B \-\-file1 filename [filenames...]
-Read FASTQ reads from one or more files, either uncompressed, bzip2 compressed, or gzip compressed. This contains either the single\-end (SE) reads or, if paired\-end, the mate 1 reads. If running in paired\-end mode, both \fB\-\-file1\fP and \fB\-\-file2\fP must be set. See the primary documentation for a list of supported formats.
-.UNINDENT
-.INDENT 0.0
-.TP
-.B \-\-file2 filename [filenames...]
-Read one or more FASTQ files containing mate 2 reads for a paired\-end run. If specified, \fB\-\-file1\fP must also be set.
-.UNINDENT
-.INDENT 0.0
-.TP
 .B \-\-identify\-adapters
-Attempt to build a consensus adapter sequence from fully overlapping pairs of paired\-end reads. The minimum overlap is controlled by \fB\-\-minalignmentlength\fP\&. The result will be compared with the values set using \fB\-\-adapter1\fP and \fB\-\-adapter2\fP\&. No trimming is performed in this mode. Default is off.
+Attempt to build a consensus adapter sequence from fully overlapping pairs of paired\-end reads. The minimum overlap is controlled by \fB\-\-merge\-threshold\fP\&. The result will be compared with the values set using \fB\-\-adapter1\fP and \fB\-\-adapter2\fP\&. No trimming is performed in this mode. Default is off.
 .UNINDENT
 .INDENT 0.0
 .TP
 .B \-\-threads n
 Maximum number of threads. Defaults to 1.
 .UNINDENT
-.SS FASTQ options
+.SS Input files
 .INDENT 0.0
 .TP
-.B \-\-qualitybase base
-The Phred quality scores encoding used in input reads \- either \(aq64\(aq for Phred+64 (Illumina 1.3+ and 1.5+) or \(aq33\(aq for Phred+33 (Illumina 1.8+). In addition, the value \(aqsolexa\(aq may be used to specify reads with Solexa encoded scores. Output is always written as Phred+33. Default is 33.
+.B \-\-file1 filename [filenames...]
+Read FASTQ reads from one or more files, either uncompressed or gzip compressed. The \fB\-\-interleaved\fP and \fB\-\-interleaved\-input\fP  options may be used to enable reading of interleaved reads from these files.
 .UNINDENT
 .INDENT 0.0
 .TP
-.B \-\-qualitymax base
-Specifies the maximum Phred score expected in input files, and used when writing output files. Possible values are 0 to 93 for Phred+33 encoded files, and 0 to 62 for Phred+64 encoded files. Defaults to 41.
+.B \-\-file2 filename [filenames...]
+Read one or more FASTQ files containing mate 2 reads for a paired\-end run. If specified, \fB\-\-file1\fP must also be set.
+.UNINDENT
+.SS Output file options
+.sp
+Output files for adapterremoval may be specified either via the \fB\-\-basename\fP option, which assigns default filenames, and/or via the individual \fB\-\-out\-*\fP to set or override the output filename for a given output read type. The same destination file may be used for multiple types of FASTQ reads, in which case the reads are written in input order.
+.INDENT 0.0
+.TP
+.B \-\-basename filename
+Prefix for the output files for which no filename was set using the corresponding options below.
+.UNINDENT
+.INDENT 0.0
+.TP
+.B \-\-out\-file1 filename
+.UNINDENT
+.INDENT 0.0
+.TP
+.B \-\-out\-file2 filename
+Output files containing trimmed mate 1 reads and mate 2 reads. If interleaved output is enabled, then this file also contains mate 2 reads.
+.UNINDENT
+.INDENT 0.0
+.TP
+.B \-\-out\-merged filename
+When used with \-\-merged, this file contains overlapping mate\-pairs which have been merged into a single read.
+.UNINDENT
+.INDENT 0.0
+.TP
+.B \-\-out\-singleton filename
+Output file to which containing paired reads for which the mate has been discarded.
+.UNINDENT
+.INDENT 0.0
+.TP
+.B \-\-out\-discarded filename
+Contains reads discarded due to the \-\-minlength, \-\-maxlength or \-\-maxns options.
+.UNINDENT
+.INDENT 0.0
+.TP
+.B \-\-out\-json filename
+.UNINDENT
+.INDENT 0.0
+.TP
+.B \-\-out\-html filename
+Reports in JSON/HTML format containing information on the parameters used in the run as well as overall statistics on the reads before and after trimming.
+.UNINDENT
+.SS FASTQ options
+.INDENT 0.0
+.TP
+.B \-\-quality\-format name
+The Phred quality scores encoding used in input reads \- either \(aq64\(aq for Phred+64 (Illumina 1.3+ and 1.5+) or \(aq33\(aq for Phred+33 (Illumina 1.8+). In addition, the value \(aqsolexa\(aq may be used to specify reads with Solexa encoded scores. The \(aqsam\(aq format may be used for Phred+33 data with very high quality scores. Default is 33.
 .UNINDENT
 .INDENT 0.0
 .TP
 .B \-\-mate\-separator separator
-Character separating the mate number (1 or 2) from the read name in FASTQ records. Defaults to \(aq/\(aq.
-.UNINDENT
-.INDENT 0.0
-.TP
-.B \-\-interleaved
-Enables \fB\-\-interleaved\-input\fP and \fB\-\-interleaved\-output\fP\&.
+Character separating the mate number (1 or 2) from the read name in FASTQ records. This is typically either \(aq/\(aq or \(aq.\(aq. By default AdapterRemoval will attempt to infer this separator automatically.
 .UNINDENT
 .INDENT 0.0
 .TP
 .B \-\-interleaved\-input
-If set, input is expected to be a interleaved FASTQ files specified using \fB\-\-file1\fP, in which pairs of reads are written one after the other (e.g. read1/1, read1/2, read2/1, read2/2, etc.).
+Enable reading of interleaved FASTQ reads from the files specified with \fB\-\-file1\fP\&. Defaults to off.
 .UNINDENT
 .INDENT 0.0
 .TP
 .B \-\-interleaved\-ouput
-Write paired\-end reads to a single file, interleaving mate 1 and mate 2 reads. By default, this file is named \fBbasename.paired.truncated\fP, but this may be changed using the \fB\-\-output1\fP option.
-.UNINDENT
-.SS Output file options
-.INDENT 0.0
-.TP
-.B \-\-basename filename
-Prefix used for the naming output files, unless these names have been overridden using the corresponding command\-line option (see below).
+Write paired\-end reads to the file specified by \fB\-\-out\-file1\fP, interleaving mate 1 and mate 2 reads. Defaults to off.
 .UNINDENT
 .INDENT 0.0
 .TP
-.B \-\-settings file
-Output file containing information on the parameters used in the run as well as overall statistics on the reads after trimming. Default filename is \(aqbasename.settings\(aq.
-.UNINDENT
-.INDENT 0.0
-.TP
-.B \-\-output1 file
-Output file containing trimmed mate1 reads. Default filename is \(aqbasename.pair1.truncated\(aq for paired\-end reads, \(aqbasename.truncated\(aq for single\-end reads, and \(aqbasename.paired.truncated\(aq for interleaved paired\-end reads.
-.UNINDENT
-.INDENT 0.0
-.TP
-.B \-\-output2 file
-Output file containing trimmed mate 2 reads when \fB\-\-interleaved\-output\fP is not enabled. Default filename is \(aqbasename.pair2.truncated\(aq in paired\-end mode.
-.UNINDENT
-.INDENT 0.0
-.TP
-.B \-\-singleton file
-Output file to which containing paired reads for which the mate has been discarded. Default filename is \(aqbasename.singleton.truncated\(aq.
-.UNINDENT
-.INDENT 0.0
-.TP
-.B \-\-outputmerged file
-If \-\-merged is set, contains overlapping mate\-pairs which have been merged into a single read. This does not include which have subsequently been trimmed due to low\-quality or ambiguous nucleotides. Default filename is \(aqbasename.merged\(aq
-.UNINDENT
-.INDENT 0.0
-.TP
-.B \-\-discarded file
-Contains reads discarded due to the \-\-minlength, \-\-maxlength or \-\-maxns options. Default filename is \(aqbasename.discarded\(aq.
+.B \-\-interleaved
+Enables \fB\-\-interleaved\-input\fP and \fB\-\-interleaved\-output\fP\&. Defaults to off.
 .UNINDENT
 .SS Output compression options
 .INDENT 0.0
 .TP
 .B \-\-gzip
-If set, all FASTQ files written by AdapterRemoval will be gzip compressed using the compression level specified using \fB\-\-gzip\-level\fP\&. The extension ".gz" is added to files for which no filename was given on the command\-line. Defaults to off.
+If set, all FASTQ files written by AdapterRemoval will be gzip compressed using the compression level specified using \fB\-\-gzip\-level\fP\&. If \fB\-\-basename\fP is used then the \(dq.gz\(dq extension added to files for which no filename was specified. Gzip compression may also be enabled by manually specifying a \(dq.gz\(dq extension for a output files. Defaults to off.
 .UNINDENT
 .INDENT 0.0
 .TP
 .B \-\-gzip\-level level
-Determines the compression level used when gzip\(aqing FASTQ files. Must be a value in the range 0 to 9, with 0 disabling compression and 9 being the best compression. Defaults to 6.
+Determines the compression level used when gzip\(aqing FASTQ files. Must be a value in the range 0 to 9, with 0 disabling compression and 9 being the best compression. For compression levels 4\-9, block based compression is performed using libdeflate. This may cause compatibility issues in rare cases, which can be migitated by using a lower compression level. Defaults to 6.
 .UNINDENT
-.INDENT 0.0
-.TP
-.B \-\-bzip2
-If set, all FASTQ files written by AdapterRemoval will be bzip2 compressed using the compression level specified using \fB\-\-bzip2\-level\fP\&. The extension ".bz2" is added to files for which no filename was given on the command\-line. Defaults to off.
-.UNINDENT
-.INDENT 0.0
-.TP
-.B \-\-bzip2\-level level
-Determines the compression level used when bzip2\(aqing FASTQ files. Must be a value in the range 1 to 9, with 9 being the best compression. Defaults to 9.
-.UNINDENT
-.SS FASTQ trimming options
+.SS FASTQ processing options
 .INDENT 0.0
 .TP
 .B \-\-adapter1 adapter
-Adapter sequence expected to be found in mate 1 reads, specified in read direction. For a detailed description of how to provide the appropriate adapter sequences, see the "Adapters" section of the online documentation. Default is AGATCGGAAGAGCACACGTCTGAACTCCAGTCA.
+Adapter sequence expected to be found in mate 1 reads, specified in read direction. For a detailed description of how to provide the appropriate adapter sequences, see the \(dqAdapters\(dq section of the online documentation. Default is AGATCGGAAGAGCACACGTCTGAACTCCAGTCA.
 .UNINDENT
 .INDENT 0.0
 .TP
 .B \-\-adapter2 adapter
-Adapter sequence expected to be found in mate 2 reads, specified in read direction. For a detailed description of how to provide the appropriate adapter sequences, see the "Adapters" section of the online documentation. Default is AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGT.
+Adapter sequence expected to be found in mate 2 reads, specified in read direction. For a detailed description of how to provide the appropriate adapter sequences, see the \(dqAdapters\(dq section of the online documentation. Default is AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGT.
 .UNINDENT
 .INDENT 0.0
 .TP
@@ -190,7 +181,7 @@ Read one or more adapter sequences from a table. The first two columns (separate
 .INDENT 0.0
 .TP
 .B \-\-minadapteroverlap length
-In single\-end mode, reads are only trimmed if the overlap between read and the adapter is at least X bases long, not counting ambiguous nucleotides (N); this is independent of the \fB\-\-minalignmentlength\fP when using \fB\-\-merge\fP, allowing a conservative selection of putative complete inserts in single\-end mode, while ensuring that all possible adapter contamination is trimmed. The default is 0.
+In single\-end mode, reads are only trimmed if the overlap between read and the adapter is at least X bases long, not counting ambiguous nucleotides (N). Defaults to 0.
 .UNINDENT
 .INDENT 0.0
 .TP
@@ -204,43 +195,75 @@ To allow for missing bases in the 5\(aq end of the read, the program can let the
 .UNINDENT
 .INDENT 0.0
 .TP
-.B \-\-trim5p n [n]
-Trim the 5\(aq of reads by a fixed amount after removing adapters, but before carrying out quality based trimming. Specify one value to trim mate 1 and mate 2 reads the same amount, or two values separated by a space to trim each mate different amounts. Off by default.
+.B \-\-merge
+In paired\-end mode, merge overlapping mates into a single and recalculate the quality scores. The overlap needs to be at least \fB\-\-merge\-threshold\fP nucleotides, with a maximum number of mismatches determined by \fB\-\-mm\fP\&. This option has no effect in single\-end mode.
 .UNINDENT
 .INDENT 0.0
 .TP
-.B \-\-trim3p n [n]
-Trim the 3\(aq of reads by a fixed amount. See \fB\-\-trim5p\fP\&.
+.B \-\-merge\-threshold length
+The minimum overlap between mate 1 and mate 2 before the reads are merged into one, when collapsing paired\-end reads. Default is 11.
 .UNINDENT
 .INDENT 0.0
 .TP
-.B \-\-trimns
-Trim consecutive Ns from the 5\(aq and 3\(aq termini. If quality trimming is also enabled (\fB\-\-trimqualities\fP), then stretches of mixed low\-quality bases and/or Ns are trimmed.
+.B \-\-prefix\-read1 X
+Adds the specified prefix to read 1 names. Default to no prefix.
 .UNINDENT
 .INDENT 0.0
 .TP
-.B \-\-maxns n
-Discard reads containing more than \fB\-\-max\fP ambiguous bases (\(aqN\(aq) after trimming. Default is 1000.
+.B \-\-prefix\-read2 X
+Adds the specified prefix to read 2 names. Default to no prefix.
 .UNINDENT
 .INDENT 0.0
 .TP
-.B \-\-trimqualities
-Trim consecutive stretches of low quality bases (threshold set by \fB\-\-minquality\fP) from the 5\(aq and 3\(aq termini. If trimming of Ns is also enabled (\fB\-\-trimns\fP), then stretches of mixed low\-quality bases and Ns are trimmed.
+.B \-\-prefix\-merged X
+Adds the specified prefix to merged read names. Default to no prefix.
+.UNINDENT
+.SS Quality trimming options
+.INDENT 0.0
+.TP
+.B \-\-pre\-trim5p n [n]
+Trim the 5\(aq of reads by a fixed amount after demultiplexing but before removing adapters. Specify one value to trim mate 1 and mate 2 reads the same amount, or two values separated by a space to trim each mate different amounts. Off by default.
 .UNINDENT
 .INDENT 0.0
 .TP
-.B \-\-trimwindows window_size
-Trim low quality bases using a sliding window based approach inspired by \fBsickle\fP with the given window size. See the "Window based quality trimming" section of the manual page for a description of this algorithm.
+.B \-\-pre\-trim3p n [n]
+Trim the 3\(aq of reads by a fixed amount after demultiplexing but before removing adapters. See \fB\-\-pre\-trim5p\fP\&.
 .UNINDENT
 .INDENT 0.0
 .TP
-.B \-\-minquality minimum
-Set the threshold for trimming low quality bases using \fB\-\-trimqualities\fP and \fB\-\-trimwindows\fP\&. Default is 2.
+.B \-\-post\-trim5p n [n]
+Trim the 5\(aq of reads by a fixed amount after removing adapters, but before carrying out quality based trimming. See \fB\-\-pre\-trim5p\fP\&.
+.UNINDENT
+.INDENT 0.0
+.TP
+.B \-\-post\-trim3p n [n]
+Trim the 3\(aq of reads by a fixed amount after removing adapters, but before carrying out quality based trimming. See \fB\-\-pre\-trim5p\fP\&.
+.UNINDENT
+.INDENT 0.0
+.TP
+.B \-\-trim\-error\-rate rate
+The threshold value used when performing trimming quality based trimming using the modified Mott\(aqs algorithm. A value of zero or less disables trimming; a value greater than one is assumed to be a Phred encoded error rate (e.g. 13 ~= 0.05). Default to 0.05.
+.UNINDENT
+.INDENT 0.0
+.TP
+.B \-\-pre\-trim\-polyx nucleotides
+Enable trimming of poly\-X tails prior to read alignment and adapter trimming. Zero or more nucleotides (A, C, G, T) may be specified. Zero or more nucleotides may be specified after the option seperated by spaces, with zero nucleotides corresponding to all of A, C, G, and T. Defaults to no trimming.
+.UNINDENT
+.INDENT 0.0
+.TP
+.B \-\-post\-trim\-polyx nucleotides
+Enable trimming of poly\-X tails after read alignment and adapter trimming/merging, but before trimming of low\-quality bases. Merged reads are not trimmed by this option (both ends are 5\(aq). See \fI\-\-pre\-trim\-polyx\fP\&. Off by default.
 .UNINDENT
 .INDENT 0.0
 .TP
 .B \-\-preserve5p
-If set, bases at the 5p will not be trimmed by \fB\-\-trimns\fP, \fB\-\-trimqualities\fP, and \fB\-\-trimwindows\fP\&. Collapsed reads will not be quality/N trimmed when this option is enabled.
+If set, bases at the 5p will not be trimmed by \fB\-\-trimns\fP, \fB\-\-trimqualities\fP, and \fB\-\-trimwindows\fP\&. Merged reads will not be quality trimmed when this option is enabled due to the 3\(aq ends being located inside the reads or overlapping the 5\(aq of the source sequences.
+.UNINDENT
+.SS Filtering options
+.INDENT 0.0
+.TP
+.B \-\-maxns n
+Discard reads containing more than \fB\-\-max\fP ambiguous bases (\(aqN\(aq) after trimming. Default is no maximum.
 .UNINDENT
 .INDENT 0.0
 .TP
@@ -250,39 +273,13 @@ Reads shorter than this length are discarded following trimming. Defaults to 15.
 .INDENT 0.0
 .TP
 .B \-\-maxlength length
-Reads longer than this length are discarded following trimming. Defaults to 4294967295.
+Reads longer than this length are discarded following trimming. Defaults to no maximum.
 .UNINDENT
-.SS FASTQ merging options
-.INDENT 0.0
-.TP
-.B \-\-merge
-In paired\-end mode, merge overlapping mates into a single and recalculate the quality scores. The overlap needs to be at least \fB\-\-minalignmentlength\fP nucleotides, with a maximum number of mismatches determined by \fB\-\-mm\fP\&. This option has no effect in single\-end mode.
-.UNINDENT
-.INDENT 0.0
-.TP
-.B \-\-minalignmentlength length
-The minimum overlap between mate 1 and mate 2 before the reads are merged into one, when collapsing paired\-end reads, or when attempting to identify complete template sequences in single\-end mode. Default is 11.
-.UNINDENT
-.INDENT 0.0
-.TP
-.B \-\-seed seed
-When collaping reads at positions where the two reads differ, and the quality of the bases are identical, AdapterRemoval will select a random base. This option specifies the seed used for the random number generator used by AdapterRemoval. This value is also written to the settings file. Note that setting the seed is not reliable in multithreaded mode, since the order of operations is non\-deterministic.
-.UNINDENT
-.INDENT 0.0
-.TP
-.B \-\-merge\-deterministic
-Enable deterministic mode; currently only affects \-\-merge, different overlapping bases with equal quality are set to N quality 0, instead of being randomly sampled. Setting this option also sets \-\-merge.
-.UNINDENT
-.INDENT 0.0
-.TP
-.B \-\-merge\-conservatively
-Alternative merging algorithm inspired by FASTQ\-join: For matching overlapping bases, the highest quality score is used. For mismatching overlapping bases, the highest quality base is used and the quality is set to the absolute difference in Phred\-score between the two bases. For mismatching bases with identical quality scores, the base is set to \(aqN\(aq and the quality score to 0 (Phred\-encoded). Setting this option also sets \-\-merge.
-.UNINDENT
-.SS FASTQ demultiplexing options
+.SS Demultiplexing options
 .INDENT 0.0
 .TP
 .B \-\-barcode\-list filename
-Perform demultiplxing using table of one or two fixed\-length barcodes for SE or PE reads. The table is expected to contain 2 or 3 columns, the first of which represent the name of a given sample, and the second and third of which represent the mate 1 and (optionally) the mate 2 barcode sequence. For a detailed description, see the "Demultiplexing" section of the online documentation.
+Perform demultiplxing using table of one or two fixed\-length barcodes for SE or PE reads. The table is expected to contain 2 or 3 columns, the first of which represent the name of a given sample, and the second and third of which represent the mate 1 and (optionally) the mate 2 barcode sequence. For a detailed description, see the \(dqDemultiplexing\(dq section of the online documentation.
 .UNINDENT
 .INDENT 0.0
 .TP
@@ -304,23 +301,6 @@ Maximum number of mismatches allowed for the mate 2 barcode; if not set, this va
 .TP
 .B \-\-demultiplex\-only
 Only carry out demultiplexing using the list of barcodes supplied with \-\-barcode\-list. No other processing is done.
-.UNINDENT
-.SH WINDOW BASED QUALITY TRIMMING
-.sp
-As of v2.2.2, AdapterRemoval implements sliding window based approach to quality based base\-trimming inspired by \fBsickle\fP\&. If \fBwindow_size\fP is greater than or equal to 1, that number is used as the window size for all reads. If \fBwindow_size\fP is a number greater than or equal to 0 and less than 1, then that number is multiplied by the length of individual reads to determine the window size. If the window length is zero or is greater than the current read length, then the read length is used instead.
-.sp
-Reads are trimmed as follows for a given window size:
-.INDENT 0.0
-.INDENT 3.5
-.INDENT 0.0
-.IP 1. 3
-The new 5\(aq is determined by locating the first window where both the average quality and the quality of the first base in the window is greater than \fB\-\-minquality\fP\&.
-.IP 2. 3
-The new 3\(aq is located by sliding the first window right, until the average quality becomes less than or equal to \fB\-\-minquality\fP\&. The new 3\(aq is placed at the last base in that window where the quality is greater than or equal to \fB\-\-minquality\fP\&.
-.IP 3. 3
-If no 5\(aq position could be determined, the read is discarded.
-.UNINDENT
-.UNINDENT
 .UNINDENT
 .SH EXIT STATUS
 .sp
